contrast ratio has been fixed
contrast ratio

--- a/login_page.css
+++ b/login_page.css
@@ -13,14 +13,18 @@
 }
 
 .ha-header-gtr {
+  padding-left: 3rem;
   grid-column: 1/2;
   grid-row: 1/2;
   align-items: center;
   justify-content: center;
   display: flex;
-  justify-content: space-between;
   background-color: var(--ha-light-background-color);
   box-shadow: 0 0.375rem 0.375rem -0.25rem var(--ha-primary-color);
+}
+
+.ha-header-gtr div:last-child {
+  margin-left: auto;
 }
 /* Main Section for Login window */
 
@@ -29,6 +33,7 @@
   grid-row: 2/3;
   background-color: var(--ha-light-background-color);
 }
+
 .ha-login-window {
   padding: 2rem;
 }
