--- a/product_page.css
+++ b/product_page.css
@@ -72,7 +72,7 @@ body {
   margin-bottom: 0.2rem;
 }
 .h-product-bottom small {
-  color: rgb(47, 226, 47);
+  color: rgb(0, 134, 0);
   font-weight: bold;
 }
 
