--- a/style.css
+++ b/style.css
@@ -36,16 +36,20 @@
 /* Header */
 
 .ha-header {
+  padding-left: 3rem;
   grid-area: header;
   align-items: center;
   justify-content: center;
   display: flex;
-  justify-content: space-between;
   background-color: var(--ha-light-background-color);
   box-shadow: 0 0.375rem 0.375rem -0.25rem var(--ha-primary-color);
 }
+
+.ha-header div:last-child {
+  margin-left: auto;
+}
 .ha-logo img {
-  width: 70px;
+  width: 80px;
 }
 .ha-logo a {
   font-weight: bold;
